--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "highlight.js": "^11.10.0",
+    "lucide-vue-next": "^0.453.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
@@ -21,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
