--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -14,7 +14,9 @@
     "dayjs": "^1.11.13",
     "highlight.js": "^11.10.0",
     "lucide-vue-next": "^0.453.0",
+    "marked": "^14.1.3",
     "pinia": "^2.2.4",
+    "vite-plugin-markdown": "^2.2.0",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
