--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-vue-next": "^0.453.0",
     "marked": "^14.1.3",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "vite-plugin-markdown": "^2.2.0",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
