--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -15,6 +15,7 @@
     "highlight.js": "^11.10.0",
     "lucide-vue-next": "^0.453.0",
     "marked": "^14.1.3",
+    "md-editor-v3": "^4.21.1",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
     "vite-plugin-markdown": "^2.2.0",
