完成创建文章的输入部分，包括切换编辑器

--- a/blog-frontend/tsconfig.app.json
+++ b/blog-frontend/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["node","md-editor-v3"],
+    "types": ["node","md-editor-v3","@vueup/vue-quill"],
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -20,6 +20,10 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/**/*.d.ts",],
   "exclude": ["node_modules"]
 }
