--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "highlight.js": "^11.10.0",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.453.0",
     "marked": "^14.1.3",
     "md-editor-v3": "^4.21.1",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
+    "quill": "^2.0.2",
     "vite-plugin-markdown": "^2.2.0",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
