--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-vue-next": "^0.453.0",
     "marked": "^14.1.3",
     "md-editor-v3": "^4.21.1",
+    "mermaid": "^11.3.0",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
     "quill": "^2.0.2",
@@ -43,5 +44,8 @@
     "vite": "^5.4.8",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.6"
+  },
+  "overrides": {
+    "quill": "^2.0.2"
   }
 }
