--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -13,6 +13,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "highlight.js": "^11.10.0",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.453.0",
@@ -24,6 +25,7 @@
     "quill": "^2.0.2",
     "vite-plugin-markdown": "^2.2.0",
     "vue": "^3.5.10",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
