--- a/blog-frontend/tsconfig.app.json
+++ b/blog-frontend/tsconfig.app.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "types": ["node","md-editor-v3","@vueup/vue-quill"],
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -18,7 +22,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.ts",
