--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "type-check": "vue-tsc --noEmit",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "echarts": "^5.5.1",
     "highlight.js": "^11.10.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.453.0",
     "marked": "^14.1.3",
     "md-editor-v3": "^4.21.1",
@@ -29,11 +31,14 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -42,10 +47,10 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.7.2",
     "vite": "^5.4.8",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.10"
   },
   "overrides": {
     "quill": "^2.0.2"
