--- a/blog-frontend/tsconfig.app.json
+++ b/blog-frontend/tsconfig.app.json
@@ -1,10 +1,12 @@
 {
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["node","md-editor-v3","@vueup/vue-quill"],
+    "types": ["node"],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -12,7 +14,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
@@ -23,12 +25,22 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowImportingTsExtensions": true
   },
   "include": [
+    "env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "src/**/*.d.ts",],
-  "exclude": ["node_modules"]
+    "src/**/*.d.ts",
+    "src/types/shims-vue.d.ts"
+  ],
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
